[package]
name = "axum_test01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.65", features = ["backtrace"] }
axum = "0.5.16"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.3.4", features = ["fs"] }
tracing = "0.1.37"
